--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,16 @@ services:
       - grafana-storage:/var/lib/grafana
     ports:
       - "3001:3000"
+  cadvisor:
+    image: gcr.io/cadvisor/cadvisor:latest
+    container_name: cadvisor
+    ports:
+      - 8080:8080
+    volumes:
+      - /:/rootfs:ro
+      - /var/run:/var/run:rw
+      - /sys:/sys:ro
+      - /var/lib/docker/:/var/lib/docker:ro
 volumes:
   data:
   grafana-storage:
