--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
     volumes:
       - alertmanager-storage:/alertmanager
       - ./alertmanager.yml:/etc/alertmanager/alertmanager.yml
+    ports:
+      - "9093:9093"
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus-poc
@@ -21,6 +23,7 @@ services:
       - data:/prometheus
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - ./web-config.yml:/etc/prometheus/web-config.yml
+      - ./rules.yml:/etc/prometheus/rules.yml
     ports:
       - "9090:9090"
   grafana:
@@ -32,7 +35,7 @@ services:
       - "3001:3000"
   cadvisor:
     image: gcr.io/cadvisor/cadvisor:latest
-    container_name: cadvisor
+    container_name: cadvisor-poc
     ports:
       - 8080:8080
     volumes:
@@ -43,3 +46,4 @@ services:
 volumes:
   data:
   grafana-storage:
+  alertmanager-storage:
