--- a/prometheus.yml
+++ b/prometheus.yml
@@ -9,11 +9,11 @@ alerting:
   alertmanagers:
   - static_configs:
     - targets:
-      # - alertmanager:9093
+      - alertmanager:9093
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
-  # - "first_rules.yml"
+  - "rules.yml"
   # - "second_rules.yml"
 
 # A scrape configuration containing exactly one endpoint to scrape:
@@ -40,4 +40,8 @@ scrape_configs:
 
   - job_name: 'docker'
     static_configs:
-    - targets: ['175.41.181.234:9100', '175.41.181.234:8080', '54.251.68.58:9100', '54.251.68.58:8080']
+    - targets: ['175.41.181.234:8080', '54.251.68.58:8080']
+
+  - job_name: 'vm'
+    static_configs:
+    - targets: ['175.41.181.234:9100', '54.251.68.58:9100', '54.251.68.58:1234']
