--- a/prometheus.yml
+++ b/prometheus.yml
@@ -44,4 +44,4 @@ scrape_configs:
 
   - job_name: 'vm'
     static_configs:
-    - targets: ['175.41.181.234:9100', '54.251.68.58:9100', '54.251.68.58:1234']
+    - targets: ['175.41.181.234:9100', '54.251.68.58:9100']
